--- a/reset-password.html
+++ b/reset-password.html
@@ -44,8 +44,9 @@
       padding:10px 14px; border-radius:14px;
       border:1px solid rgba(148,163,184,.28);
       background:rgba(30,41,59,.65);
-      color:#e5e7eb; font-weight:800;
+      color:#e5e7eb; font-weight:900;
       cursor:pointer;
+      text-decoration:none;
     }
     .btn.primary{
       border-color: rgba(245,158,11,.35);
@@ -53,38 +54,38 @@
     }
   </style>
 
-  <!-- Firebase + auth -->
   <script defer src="assets/js/config.js"></script>
 </head>
 <body>
   <div class="wrap">
     <div class="card">
       <div class="h1">Скидання пароля</div>
-      <div class="muted">
-        Створи новий пароль для акаунту STOLAR CARP.
-      </div>
+      <div class="muted">Створи новий пароль для акаунту STOLAR CARP.</div>
 
-      <div id="box" class="status warn">
-        Перевіряємо посилання…
-      </div>
+      <div id="box" class="status warn">Перевіряємо посилання…</div>
 
       <div id="form" style="display:none;">
         <div class="field">
-          <label>Новий пароль</label>
+          <label class="muted">Новий пароль</label>
           <input id="p1" type="password" placeholder="Мінімум 6 символів">
         </div>
         <div class="field">
-          <label>Підтвердіть пароль</label>
+          <label class="muted">Підтвердіть пароль</label>
           <input id="p2" type="password" placeholder="Повторіть пароль">
         </div>
 
         <div class="row">
-          <button id="btnSave" class="btn primary">Зберегти пароль</button>
-          <a class="btn" href="register.html">До входу</a>
+          <button id="btnSave" class="btn primary" type="button">Зберегти пароль</button>
+          <a class="btn" href="auth.html">До входу</a>
         </div>
       </div>
     </div>
   </div>
+
+  <!-- Firebase compat -->
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+  <script src="assets/js/firebase-init.js"></script>
 
   <script>
   (function () {
@@ -104,7 +105,7 @@
     const oobCode = params.get('oobCode');
 
     if (mode !== 'resetPassword' || !oobCode){
-      setBox('bad', 'Некоректне посилання', 'Це посилання не призначене для скидання пароля.');
+      setBox('bad','Некоректне посилання','Це посилання не призначене для скидання пароля.');
       return;
     }
 
@@ -115,22 +116,21 @@
 
         const auth = window.scAuth;
 
-        // перевіряємо код
         await auth.verifyPasswordResetCode(oobCode);
 
-        setBox('ok', 'Посилання підтверджене', 'Введіть новий пароль нижче.');
+        setBox('ok','Посилання підтверджене','Введіть новий пароль нижче.');
         form.style.display = 'block';
 
         btn.onclick = async () => {
-          const a = p1.value.trim();
-          const b = p2.value.trim();
+          const a = (p1.value || "").trim();
+          const b = (p2.value || "").trim();
 
           if (a.length < 6){
-            setBox('warn', 'Слабкий пароль', 'Пароль має містити мінімум 6 символів.');
+            setBox('warn','Слабкий пароль','Пароль має містити мінімум 6 символів.');
             return;
           }
           if (a !== b){
-            setBox('warn', 'Паролі не співпадають', 'Перевірте правильність введення.');
+            setBox('warn','Паролі не співпадають','Перевір правильність введення.');
             return;
           }
 
@@ -139,14 +139,13 @@
 
           await auth.confirmPasswordReset(oobCode, a);
 
-          setBox('ok', 'Пароль змінено ✅', 'Тепер ви можете увійти з новим паролем.');
+          setBox('ok','Пароль змінено ✅','Тепер ти можеш увійти з новим паролем.');
           form.style.display = 'none';
-
         };
 
       } catch (e) {
         console.error(e);
-        setBox('bad', 'Помилка', 'Посилання прострочене або вже використане. Надішліть запит на скидання пароля ще раз.');
+        setBox('bad','Помилка','Посилання прострочене або вже використане. Надішли запит на скидання пароля ще раз.');
       }
     }, 200);
   })();
